--- a/downlloadmp3/src/main/resources/application.properties
+++ b/downlloadmp3/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.datasource.logSlowSql=true
 #http://localhost:8765/druid/sql.html  访问这个页面
 mybatis.typeAliasesPackage:com.ljl.downlloadmp3.model
 mybatis.mapperLocations: classpath:mapping/*.xml
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.mode=LEGACYHTML5
